代码优化修改